--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   country_state_city_picker: ^1.2.8
   firebase_app_check: ^0.3.1+4
   image_picker: ^1.1.2
+  flutter_easyloading: ^3.0.5
+
 
 dev_dependencies:
   flutter_test:
